# nsee

./: linux_setup.sh  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
src/nsee/: __init__.py  geometry.py  image_list.py  imagelist.py  io.py  main.py  ops.py
src/nsee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
